--- a/Chat/style.css
+++ b/Chat/style.css
@@ -1,28 +1,17 @@
- *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 button{
     border: none;
     outline: none;
     cursor: pointer;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: antiquewhite;
-    display: flex;
-    justify-content: center;
-    height: 300px;
-    width: 100%;
-}
-
 section{
+    grid-area: chat;
+    position: relative;
     margin: auto;
     text-align: center;
     padding: 0 1rem;
+    height: 570px;
+    width: 720px;
 }
 
 
@@ -31,19 +20,16 @@ p{
 }
 
 .chat{
-    position: fixed;
-    height:500px;
-    width: 600px;
+    position: relative;
     background-color: rgb(254, 254, 255);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 0.75rem;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0,4);
 }
 
 .chat-area{
-    height: 80%;
+    height: 570px;
     overflow-y: auto;
     overflow-x: hidden;
 }
