--- a/Style/grupos.css
+++ b/Style/grupos.css
@@ -1,8 +1,8 @@
-#add_contact_container {
+#add_group_container {
     position:absolute;
-    top: 28%;
-    left: 45%;
-    right: 30%;
+    top:25%;
+    left:45%; 
+    right:30%;
     background-color: dimgray;
     color: white;
     display:none;
@@ -11,7 +11,7 @@
     padding:5px;
 }
 
-input[type=text], select, textarea, input[type="email"], input[type="tel"] {
+input[type=text], textarea{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -29,4 +29,18 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+select {
+    height: 5rem;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    resize: vertical;
+}
+
+form p {
+    font-size: 12px;
 }
