--- a/Style/chat.css
+++ b/Style/chat.css
@@ -99,7 +99,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blueviolet;
+    color: lightblue;
     font-size: 40px;
     background-color: rgba(0, 0, 0, 0.801);
 }
@@ -255,8 +255,8 @@ p{
 
 #attach_file_popup {
     position:absolute;
-    top: 30%;
-    left: 23%;
+    top: 25%;
+    left: 33%;
     background-color: dimgray;
     color:white;
     display:none;
@@ -264,11 +264,10 @@ p{
     border-radius: 5px;
 }
 
-#file_img {
+#file_img_1, #file_img_2, #file_img_3 {
     font-size: 70px;
-    position: relative;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding: 10px;
+    margin: 10px;
 }
 
 #file_text{
@@ -276,13 +275,17 @@ p{
     text-align: center;
 }
 
-#close_btn {
-    display: block;
-    position: absolute;
-    right: 6px;
-    top: 6px;
-    color: black;
-    background-color: red;
-    border-radius: 5px;
-    padding: 4px 12px;
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+#attach_file_popup h1, #attach_file_popup i{
+    text-align: center;
 }
