--- a/Style/main.css
+++ b/Style/main.css
@@ -75,7 +75,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blueviolet;
+    color: lightblue;
     font-size: 40px;
     background-color: rgba(0, 0, 0, 0.801);
 }
@@ -128,6 +128,17 @@ body {
     left: 12px;
     bottom: 12px;
     font-size: 15px;
+    padding: 4px 12px;
+}
+
+.category-index {
+    position:absolute;
+    color: #fff;
+    background-color: rgba(0,15,47,0.5);
+    border-radius: 4px;
+    right: 12px;
+    top: 12px;
+    font-size: 30px;
     padding: 4px 12px;
 }
 
