--- a/Style/grupos.css
+++ b/Style/grupos.css
@@ -11,6 +11,19 @@
     padding:5px;
 }
 
+#group_info {
+    position:absolute;
+    top:5%;
+    left:45%; 
+    right:30%;
+    background-color: dimgray;
+    color: white;
+    display:none;
+    border: solid 10px black;
+    border-radius: 5px;
+    padding:5px;
+}
+
 input[type=text], textarea{
     width: 100%;
     padding: 12px;
@@ -43,4 +56,16 @@ select {
 
 form p {
     font-size: 12px;
+}
+
+#group_info a {
+    background-color: #04AA6D;
+    display: block;
+    text-align: center;
+    color: white;
+    padding: 12px 20px;
+    margin: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
