--- a/Style/main.css
+++ b/Style/main.css
@@ -64,10 +64,7 @@ body {
 
 .top_bar_f {
     grid-area: top_bar_f;
-    text-align: center;
-    font-size: 20px;
     background-color: dimgray;
-    color:rgb(192, 192, 192);
 }
 
 .app_logo { 
@@ -82,25 +79,11 @@ body {
 
 .feed {
     grid-area: feed;
-    background-color: dimgray;
+    background-color: lightgray;
     display: flex;
     width: 100%;
     height:100%;
     align-items: center;
-}
-
-.video-call-wrapper {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    flex-wrap:wrap;
-}
-    
-.video-participant{
-    width: 50%;
-    height: 50%;
-    position: relative;
 }
 
 .img_f {
@@ -120,28 +103,6 @@ body {
     padding: 4px 12px;
 }
 
-.category-tab {
-    position:absolute;
-    color: #fff;
-    background-color: rgba(0,15,47,0.5);
-    border-radius: 4px;
-    left: 12px;
-    bottom: 12px;
-    font-size: 15px;
-    padding: 4px 12px;
-}
-
-.category-index {
-    position:absolute;
-    color: #fff;
-    background-color: rgba(0,15,47,0.5);
-    border-radius: 4px;
-    right: 12px;
-    top: 12px;
-    font-size: 30px;
-    padding: 4px 12px;
-}
-
 .participant-actions btn{
     font-size: 15px;
     padding: 12px 12px;
@@ -149,7 +110,6 @@ body {
     background-color: rgba(0,15,47,0.5);
     border-radius: 4px;
 }
-
 
 
 .container_chamada {
