--- a/Style/chat.css
+++ b/Style/chat.css
@@ -24,7 +24,7 @@ body {
     height: 620px;
     position: relative;
     left: 0;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
 }
 
 .left_bar_chat bottom {
@@ -45,7 +45,7 @@ body {
 .left_bar_chat btn {
     padding: 0.80rem 0.5rem;
     font-size: 35px;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
     color:rgb(192, 192, 192);
     display: flex;
     justify-content: center;
@@ -82,16 +82,21 @@ body {
     text-align: right;
     padding-right: 10px;
     font-size: 35px;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
     color:rgb(192, 192, 192);
     padding-top:3px;
+    height: 150px;
 }
 
 .group-name {
-    text-align: left;
-    background-color: dimgray;
+    /* text-align: center; */
+    background-color: rgb(43,43,43);
     justify-content: center;
     padding-top: 10px;
+    color: rgb(192,192,192);
+    font-size: 25px;
+    width: 251px;
+    padding-left: 10px;
 }
 
 .app_logo { 
@@ -101,7 +106,7 @@ body {
     align-items: center;
     color: lightblue;
     font-size: 40px;
-    background-color: rgba(0, 0, 0, 0.801);
+    background-color: rgb(41,41,41);
 }
 
 .right_bar_chat {
@@ -110,7 +115,7 @@ body {
     height: 720px;
     position: relative;
     right: 0;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
 }
 
 .right_bar_chat bottom {
@@ -118,9 +123,10 @@ body {
     width: 280px;
     height: 50px;
     bottom: 0px;
+    text-align: center;
     font-size: 25px;
     display: block;
-    text-align: center;
+    color: rgb(192, 192, 192);
 }
 
 .right_bar_chat ul li{ 
@@ -130,11 +136,14 @@ body {
     font-size: 18px;
     text-align: center;
     margin-right: 30px;
+    color: rgb(192,192,192);
 }
 
 #participantestop {
     font-weight: bold;
     font-size: 25px;
+    color: rgb(192,192,192);
+    padding-top: 0px;
 }
 
 #participantesbottom {
@@ -164,6 +173,7 @@ section{
     height: 620px;
     overflow-y: auto;
     overflow-x: hidden;
+    background-color: dimgray;
 }
 
 .mensagem-exemplo{
@@ -179,18 +189,19 @@ section{
 }
 
 .mensagem-exemplo .msg{
-    background-color: black;
-    color: white;
+    background-color: lightblue;
+    color: black;
     padding: 0.5rem;
     border-radius: 25px;
     margin-left: 1rem;
 }
 
 .input-area{
-    padding-bottom: 15px;;
+    padding-bottom: 17px;
     position: relative;
     display: flex;
     justify-content: center;
+    background-color: dimgray;
 }
 
 .input[type="text"]{
@@ -206,8 +217,8 @@ section{
     text-align: right;
     padding-right: 10px;
     font-size: 35px;
-    background-color: silver;
-    color:black;
+    background-color: dimgray;
+    color:rgb(43,43,43);
     margin-left: 10px;
 }
 
@@ -257,10 +268,10 @@ p{
     position:absolute;
     top: 25%;
     left: 33%;
-    background-color: dimgray;
+    background-color: rgb(60,60,60);
     color:white;
     display:none;
-    border: solid 10px black;
+    border: solid 10px rgb(46,46,46);
     border-radius: 5px;
 }
 
