--- a/Style/contactos.css
+++ b/Style/contactos.css
@@ -3,10 +3,10 @@
     top: 28%;
     left: 45%;
     right: 30%;
-    background-color: dimgray;
+    background-color: rgb(60,60,60);
     color: white;
     display:none;
-    border: solid 10px black;
+    border: solid 10px rgb(46,46,46);
     border-radius: 5px;
     padding:5px;
 }
