--- a/Style/grupos.css
+++ b/Style/grupos.css
@@ -3,10 +3,10 @@
     top:25%;
     left:45%; 
     right:30%;
-    background-color: dimgray;
+    background-color: rgb(60,60,60);
     color: white;
     display:none;
-    border: solid 10px black;
+    border: solid 10px rgb(46,46,46);
     border-radius: 5px;
     padding:5px;
 }
@@ -16,10 +16,10 @@
     top:5%;
     left:45%; 
     right:30%;
-    background-color: dimgray;
+    background-color: rgb(60,60,60);
     color: white;
     display:none;
-    border: solid 10px black;
+    border: solid 10px rgb(46,46,46);
     border-radius: 5px;
     padding:5px;
 }
