--- a/Style/main.css
+++ b/Style/main.css
@@ -21,7 +21,7 @@ body {
     height: 620px;
     position: relative;
     left: 0;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
 }
 
 .side_bar_f a, .left_bar_c a, .side_bar_g a{
@@ -42,7 +42,7 @@ body {
 .side_bar_f btn, .left_bar_c_bottom btn, .video-bottom btn, .left_bar_chat btn, .side_bar_g btn {
     padding: 0.80rem 0.5rem;
     font-size: 35px;
-    background-color: dimgray;
+    background-color: rgb(43,43,43);
     color:rgb(192, 192, 192);
     display: flex;
     justify-content: center;
@@ -64,7 +64,7 @@ body {
 
 .top_bar_f {
     grid-area: top_bar_f;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
 }
 
 .app_logo { 
@@ -74,16 +74,17 @@ body {
     align-items: center;
     color: lightblue;
     font-size: 40px;
-    background-color: rgba(0, 0, 0, 0.801);
+    background-color: rgb(41,41,41);
 }
 
 .feed {
     grid-area: feed;
-    background-color: lightgray;
-    display: flex;
-    width: 100%;
-    height:100%;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px 200px;
+    grid-template-rows: 310px 310px;
+    grid-auto-columns: 200px;
+    grid-auto-rows: 310px;
+    background-color: dimgray;
 }
 
 .img_f {
@@ -129,32 +130,33 @@ body {
 
 .top_bar_c {
     grid-area: top_bar_c;
-    font-size: 20px;
+    font-size: 25px;
     padding-top: 12px;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
     padding-left: 10px;
     color:rgb(192, 192, 192);
+    height: 130px;
 }
 
 .left_bar_c {
     grid-area: left_bar_c; 
     width: 280px;
-    height: 570px;
+    height: 571px;
     position: relative;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
     color:rgb(192, 192, 192);
 }
 
 .left_bar_c_bottom {
     grid-area: left_bar_c_bottom;
     display: inline-block;   
-    background-color: dimgray;       
+    background-color: rgb(43, 43, 43);       
 }
 
 .left_bar_c_bottom btn {
     padding: 0.25rem 0.5rem;
     font-size: 35px;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
     color:rgb(192, 192, 192);
     display: flex;
     justify-content: center;
@@ -175,7 +177,6 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
     flex-wrap:wrap;
 }
     
@@ -191,13 +192,15 @@ body {
     left: 12px;
 }
 
-.video-bottom { grid-area: video-bottom; background-color: silver ;}
+.video-bottom { grid-area: video-bottom; background-color: rgb(43, 43, 43) ;}
 
 .participantes { 
     grid-area: participantes; 
     overflow: scroll; 
-    background-color: silver;
-    color:white;
+    background-color: rgb(43, 43, 43);
+    color:rgb(192, 192, 192);
+    height: 402px;
+    width: 290px;
 }
 
 .participantes ul li, .lista-espera ul li{ 
@@ -206,7 +209,8 @@ body {
     position: relative;
     font-size: 18px;
     text-align: center;
-    margin-right: 30px;
+    margin-right: 24px;
+    padding-top: 0px;
 }
 
 #participantestop, #lista-espera-top {
@@ -222,8 +226,10 @@ body {
 .lista-espera { 
     grid-area: lista-espera; 
     overflow: scroll;
-    background-color: silver;
-    color:white;
+    background-color: rgb(43, 43, 43);
+    color: rgb(192, 192, 192);
+    height: 305px;
+    width: 290px;
 }
 
 .right_bar_bottom { 
@@ -231,7 +237,7 @@ body {
     font-size: 25px;
     display: block;
     text-align: center;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
     color:rgb(192, 192, 192);
     border: none;
 }
@@ -240,12 +246,13 @@ body {
 .dropup-content {
     display:none;
     position:absolute;
-    background-color: black;
+    background-color: rgb(39,39,39);
     color: white;
     z-index: 1;
     bottom: 50px;
     margin-left: 6px;
     min-width: 250px;
+    border-radius: 10px;
 }
 
 .dropup-content a {
@@ -267,10 +274,10 @@ body {
     font-size: 20px;
     top: 30%;
     left: 40%;
-    background-color: dimgray;
+    background-color: rgb(60,60,60);
     color: white;
     display:none;
-    border: solid 10px black;
+    border: solid 10px rgb(46,46,46);
     border-radius: 5px;
     padding:5px;
     text-align: center;
@@ -292,8 +299,8 @@ input[type=submit] {
 .video-bottom btn {
     padding: 0.45rem 0.5rem;
     font-size: 35px;
-    background-color: silver;
-    color:white;
+    background-color: rgb(43, 43, 43);
+    color:rgb(192, 192, 192);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,27 +343,25 @@ input[type=submit] {
     height: 620px;
     position: relative;
     left: 0;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
 }
 
 .top_bar_g {
     grid-area: top_bar_g;
     text-align: center;
     font-size: 20px;
-    background-color: dimgray;
+    background-color: rgb(43, 43, 43);
     color:rgb(192, 192, 192);
 }
 
 .group { 
     grid-area: group;
     display: grid;
-    overflow-y: scroll;
-    overflow-x: hidden;
     grid-template-columns: 200px 200px 200px 200px 200px;
     grid-template-rows: 310px 310px;
     grid-auto-columns: 200px;
     grid-auto-rows: 310px;
-    background-color: silver;
+    background-color: dimgray;
 }
 
 #group_img {
@@ -377,4 +382,12 @@ input[type=submit] {
 }
 p {
     font-family: "Dm Sans", sans-serif;
+}
+
+#pastas{
+    color: black;
+    width: 160px;
+    word-wrap: break-word;
+    font-size: 25px;
+    text-align: center;
 }
